--- a/menu.css
+++ b/menu.css
@@ -169,3 +169,9 @@ footer {
     padding: 60px 0;
     opacity: 0.7;
 }
+.Listes-allergenes {
+    margin-top: 30px;
+    font-size: 0.9rem;
+    color: var(--muted-blue);
+    letter-spacing: 1px;
+}
